--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ide.rider": "3.0.34",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.render-pipelines.high-definition": "14.0.11",
+    "com.unity.rendering.denoising": "1.0.2",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
